Version 9.5.1
=============

Changes in detail
-----------------
Added CDockContainer::UndockContainerGroup


Version 9.5
===========
This version adds a CustomPrintDlg sample. This sample provides an
alternative to the PrintDlg and PrintDlgEx common dialogs which have had 
their functionality downgraded in Windows 11.

New Features and Enhancements
-----------------------------
* Added the CustomPrintDlg sample to provide an alternative to PrintDlg
  and PrintDlgEx.
* Added a new feature to the Themes sample. This sample now demonstrates 
  how to specify the window's caption color on Windows 11.
* CComboBoxEx, CHeader, CListView, CToolbar, and CTreeView now manage their
  own image lists. There is no longer any need to keep a local copy of the
  image list assigned to these controls to keep the image list in scope.
* Updated CImageList.
* Updated CTab and the TabDemo sample.
* Optimized the redrawing of frames and dockers when moving windows between
  monitors with different display settings.
* Simplified support for additional toolbars in frames.

Changes in detail
-----------------
Added CDockContainer::SetTabsFontSize
Added CDockContainer::SetTabsIconSize
Added CFrameT::SetToolBarImages       Added overload for additional toolbars
Added CImageList::CreateDragImage
Added CPrintPreview::CPrintPreview    Additional constructor
Added CTab::SetTabsFontSize
Added CTab::SetTabsIconSize
Added CWinApp::GetHDevMode
Added CWinApp::GetHDevNames
Added CWinApp::ResetPrinterMemory
Added CWinApp::UpdateDefaultPrinter
Added CWinApp::UpdatePrinterMemory

Modified CDockContainer::SetTBImageList        removed CImageList& argument
Modified CDockContainer::SetTBImageListDis     removed CImageList& argument
Modified CDockContainer::SetTBImageListHot     removed CImageList& argument
Modified CFrameT::SetTBImageList               removed CImageList& argument
Modified CFrameT::SetTBImageListDis            removed CImageList& argument